添加项目编辑的网站链接功能

--- a/app/assets/stylesheets/components/project_head.css.scss
+++ b/app/assets/stylesheets/components/project_head.css.scss
@@ -70,3 +70,44 @@
     }
   }
 }
+
+.project-edit {
+  .head-edit {
+
+    .name {
+      a {
+        color: #444;
+        font-weight: 500;
+      }
+    }
+
+    .sub-name {
+      color: #999;
+      margin-bottom: 1rem;
+    }
+
+    .info {
+      color: #666;
+
+      div {
+        margin-bottom: 0.5rem;
+      }
+
+      i.fa {
+        margin-right: 0.5rem;
+        margin-left: 1rem;
+        width: 1rem;
+
+        &:first-child {
+          margin-left: 0;
+        }
+      }
+
+    }
+
+  }
+}
+
+.logo img {
+  border-radius: 10rem;
+}
