没填link的话不显示

--- a/app/views/projects/_head.html.slim
+++ b/app/views/projects/_head.html.slim
@@ -9,10 +9,11 @@
   = render 'star'
   hr
     .info
-      .link
-        i.fa.fa-link
-        span
-          = link_to @project.link, "http://#{@project.link}", target: '_blank'
+      - if @project.link.present?
+        .link
+          i.fa.fa-link
+          span
+            = link_to @project.link, "http://#{@project.link}", target: '_blank'
       .address
         i.fa.fa-map-marker
         span
