--- a/app/assets/stylesheets/components/operate.css.scss
+++ b/app/assets/stylesheets/components/operate.css.scss
@@ -13,6 +13,7 @@
     margin: 0.5rem 0;
     border-radius: 5rem;
     color: #555;
+    background-color: #fff;
 
     &:hover {
       background-color: #eee;
