--- a/app/assets/stylesheets/project_show.css.scss
+++ b/app/assets/stylesheets/project_show.css.scss
@@ -1,4 +1,25 @@
 .project-show {
+
+  background-color: #F3F8F9;
+
+  .box {
+    background-color: #fff;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #d8d8d8;
+    margin-bottom: 1.25rem;
+    color: #666;
+
+    .title {
+      padding: 0.5rem 1rem;
+      color: #666;
+      font-weight: 600;
+    }
+
+    p, .content {
+      padding: 0.5rem 1rem;
+    }
+  }
   
   .tab-content {
     margin-top: 2rem;
@@ -24,23 +45,6 @@
   }
 
   .content {
-    margin-top: 2rem;
-    
-    .title {
-      border-bottom: 1px solid #ddd;
-      padding-bottom: 0.5rem;
-      margin-bottom: 0.5rem;
-    }
-
-    .team {
-
-      margin-top: 2rem;
-
-      .more-info {
-        text-align: center;
-        margin: 1rem 0;
-      }
-    }
 
     .job {
 
