--- a/app/views/money_requires/admin.html.slim
+++ b/app/views/money_requires/admin.html.slim
@@ -11,7 +11,7 @@
 .money-require-admin ng-controller='MoneyRequireAdminController' ng-init='init(#{@project.id}, {})'
   .row
     .small-12.columns
-      .head
+      .nav-head
         ul.small-block-grid-1.medium-block-grid-5.list
           li
             a ng-class='{ active: money_require.status == "ready" || !money_require }'
