--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -21,48 +21,46 @@
           .box.status-wrapper
             .status-link
               .status #{format_status(@project.vstatus)}
-            h5.title 基本介绍
+            h5.title 项目简介
             p.description #{@project.description}
-          = render partial: 'show_tab', locals: { type: 'basic' }
-          .basic-content
+          /*= render partial: 'show_tab', locals: { type: 'basic' }*/
+          .box-wrapper ng-controller='MoneyRequireController' ng-init='init(#{@project.id}, {})'
+            .box
+              .invest-content
+                moneyrequire require='opened' title='"融资情况"'
+                .more-info
+                  = link_to '更多投资信息...', invest_project_path(@project)
+                investbutton require='opened'
+            .box.history ng-repeat='history in histories'
+              moneyrequire require='history' title='"历史投资"'
+          .box
             - if @project.screenshots.present?
-              h3.title 产品截图
-              ul.image.clearing-thumbs.small-block-grid-4 data-clearing=""
-                - @project.screenshots.each do |s|
+              h5.title 产品介绍
+              .content
+                ul.image.clearing-thumbs.small-block-grid-4 data-clearing=""
+                  - @project.screenshots.each do |s|
+                    li
+                      = link_to s.image.url do
+                        - image_tag s.image.small.url
+          .box.team
+            h5.title 团队情况
+            .content
+              ul.small-block-grid-1.medium-block-grid-2
+                - @project.members.each do |m|
                   li
-                    = link_to s.image.url do
-                      - image_tag s.image.small.url
-            h3.title 基本介绍
-            p.description #{@project.description}
-
-            .invest-content ng-controller='MoneyRequireController' ng-init='init(#{@project.id}, {})'
-              h3.title 投资情况
-              moneyrequire require='opened' title='"当前轮次"'
+                    .person
+                      .row
+                        .small-4.medium-4.columns
+                          = image_tag m.user.avatar_url
+                        .small-8.medium-8.columns
+                          .name 
+                            = link_to m.user.name, user_path(m.user)
+                          .job-title #{m.title}
+                          .description #{m.description || m.user.description}
               .more-info
-                = link_to '更多投资信息...', invest_project_path(@project)
-              investbutton require='opened'
-              .history ng-repeat='history in histories'
-                moneyrequire require='history' title='"历史投资"'
+                = link_to '查看更多团队故事...', team_project_path(@project)
 
-
-            .team
-              h3.title 团队情况
-              .row
-                .small-12.columns
-                  ul.small-block-grid-1.medium-block-grid-2
-                    - @project.members.each do |m|
-                      li
-                        .person
-                          .row
-                            .small-4.medium-3.columns
-                              = image_tag m.user.avatar_url
-                            .small-8.medium-9.columns
-                              .name 
-                                = link_to m.user.name, user_path(m.user)
-                              .job-title #{m.title}
-                              .description #{m.description || m.user.description}
-                  .more-info
-                    = link_to '查看更多团队故事...', team_project_path(@project)
+          .box
             = render 'job'
     javascript:
       var jiathis_config={
