--- a/app/assets/stylesheets/components/person.css.scss
+++ b/app/assets/stylesheets/components/person.css.scss
@@ -1,28 +1,34 @@
+@import 'variables';
 .person {
   padding: 1rem 0;
 
+  img {
+    border-radius: 10rem;
+  }
+
   .name {
-    padding-bottom: 0.5rem;
-    @media only screen and (max-width: 40em) {
+    //padding-bottom: 0.5rem;
+    @media #{$small-only} {
       padding-bottom: 0.2rem;
     }
     a {
       color: #333;
-      font-weight: 600;
-      font-size: 120%;
+      font-weight: 500;
+      font-size: 110%;
     }
   }
 
   .job-title {
     color: #999;
     font-weight: 500;
-    padding-bottom: 0.5rem;
+    margin-bottom: 0.5rem;
   }
 
   .description {
     color: #999;
     margin-top: 0.5rem;
     line-height: 1.2;
+    font-size: 95%;
   }
 
 }// person
