--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -61,7 +61,7 @@ $body-font-family: "Helvetica Neue", "Helvetica", Tahoma, Arial, STXihei, "ÂçéÊñ
 
 // We use these as default colors throughout
 $primary-color: #34637f;
-$secondary-color: #eee3c7;
+$secondary-color: #00C4A4;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
 // $warning-color: #f08a24;
