--- a/app/assets/stylesheets/components/project_head.css.scss
+++ b/app/assets/stylesheets/components/project_head.css.scss
@@ -131,4 +131,22 @@
 
 .share-link {
   margin-bottom: 3rem;
+  .text {
+    float: left;
+    margin-top: 6px;
+    color: #999;
+    font-size: 95%;
+    margin-right: 1rem;
+  }
+  a .jiathis_txt{
+    background: none !important;
+    margin-left: -15px;
+
+    .fa {
+      color: #999;
+      &:hover {
+        color: $primary-color;
+      }
+    }
+  }
 }
