--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -4,13 +4,18 @@
   .row
     .small-12.medium-4.large-3.columns
       = render 'head'
+      hr
       /! JiaThis Button BEGIN
       .row
         .small-12.columns
           .jiathis_style_24x24.share-link
+            span.text 分享到
             a.jiathis_button_tsina
+              span.fa.fa-weibo
             a.jiathis_button_weixin
-            a.jiathis_button_douban
+              span.fa.fa-wechat
+            /*a.jiathis_button_douban*/
+              /*span.fa.fa-wechat*/
             /! a.jiathis_button_tqq
             /! a href="http://www.jiathis.com/share?uid=1938659" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank"
 
