--- a/app/views/home/nologin.html.slim
+++ b/app/views/home/nologin.html.slim
@@ -1,4 +1,4 @@
-.start-content.top-blank
+.start-content
   .row
     .small-12.columns
       /*form ng-submit='submit()' ng-controller='HomeController'*/
