--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -45,7 +45,7 @@ $body-font-family: "Helvetica Neue", "Helvetica", Tahoma, Arial, STXihei, "ÂçéÊñ
 // $font-weight-bold: bold !default
 
 // We use these to control various global styles
-// $body-bg: #fff;
+$body-bg: #F3F8F9;
 // $body-font-color: #222;
 // $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 // $body-font-weight: $font-weight-normal;
