--- a/app/assets/stylesheets/components/shared_link.css.scss
+++ b/app/assets/stylesheets/components/shared_link.css.scss
@@ -1,4 +1,14 @@
 .shared-link {
   list-style-type: none;
-  margin: 2rem 0 0 0;
+  margin: 1rem 0 0 0;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+
+  a {
+    color: #999;
+    text-decoration: underline;
+    &:hover {
+      color: #666;
+    }
+  }
 }
