--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -1,14 +1,15 @@
-.row
-  .small-12.medium-10.medium-centered.columns.top-blank
-    .row
-      .small-12.columns
-        h2
-          | 修改我的密码
-        = simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
-          = f.error_notification
-          = f.input :reset_password_token, as: :hidden
-          = f.full_error :reset_password_token
-          = f.input :password, label: "新密码", required: true, autofocus: true
-          = f.input :password_confirmation, label: "再次确认", required: true
-          = f.button :submit, "确认修改"
-        = render "devise/shared/links"
+.user-new.top-blank
+  .row
+    .small-12.medium-7.large-5.medium-centered.columns
+      .row
+        .small-12.columns
+          = simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }, wrapper: :foundation_no_style) do |f|
+            h4.title
+              | 修改我的密码
+            = f.error_notification
+            = f.input :reset_password_token, as: :hidden
+            = f.full_error :reset_password_token
+            = f.input :password, label: "新密码", required: true, autofocus: true
+            = f.input :password_confirmation, label: "再次确认", required: true
+            = f.button :submit, "确认修改", class: 'expand'
+          = render "devise/shared/links"
