--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -1,10 +1,11 @@
-.row
-  .small-12.medium-10.medium-centered.columns.top-blank
-    .row
-      .small-12.columns
-        h2 忘记你的密码?
-        p 找回密码
-        = simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
-          = f.input :email, required: true, autofocus: true, placeholder: '邮箱地址'
-          = f.button :submit, "发送重置密码邮件"
-        = render "devise/shared/links"
+.user-new.top-blank
+  .row
+    .small-12.medium-7.large-5.medium-centered.columns
+      .row
+        .small-12.columns
+          = simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }, wrapper: :foundation_no_style) do |f|
+            h4.title 忘记你的密码?
+            p.sub-title 找回密码
+            = f.input :email, required: true, autofocus: true, placeholder: '邮箱地址'
+            = f.button :submit, "重置密码", class: 'expand'
+          = render "devise/shared/links"
