关于我们, 添加风险提示

--- a/app/views/about/index.html.slim
+++ b/app/views/about/index.html.slim
@@ -1,7 +1,13 @@
 - content_for(:title) do
   | 关于我们
 
-.row.top-blank
+.about.row.top-blank
   .small-12.columns
-    h2 关于我们
-    p 我们的公司名字为创业赢, 顾名思义, 是为了服务于创业团队的股权融资, 以及找到合适的人而存在的.
+    h4.title 关于我们
+    p 深圳市创业赢网络科技有限公司，成立于2014年6月，是由一群有简单创业理想，并带着服务于创业企业这一简单想法的创业伙伴，创建的创业众筹网络平台。创业赢期望通过自身努力不断优化网站和制度设计，完善用户体验，创建一个更为透明、开放、合理的创业生态圈。
+
+    h5 我们的团队
+    p TODO
+
+    h5 资质信息
+    p TODO
