--- a/app/views/layouts/_foot.html.slim
+++ b/app/views/layouts/_foot.html.slim
@@ -12,6 +12,8 @@
           = link_to "法律法规", law_about_index_path
         li
           = link_to "人才招聘", job_about_index_path
+        li
+          = link_to "风险提示", venture_about_index_path
   .row
     .small-12.columns.checkin
       | © 2014 cywin.cn 
