worker name change

--- a/app/views/home/nologin.html.slim
+++ b/app/views/home/nologin.html.slim
@@ -158,7 +158,7 @@ hr
 .start-jobs-content
   .row
     .small-12.columns
-      h2 参与创业
+      h2 创业职位
       ul.small-block-grid-1.medium-block-grid-2.large-block-grid-3
         - 3.times do |i|
           - person_require = @person_requires[i]
@@ -236,4 +236,4 @@ hr
                         .item
                           | -
       p.text-center
-        = link_to '查看所有工作', jobs_path
+        = link_to '查看所有职位', jobs_path
