--- a/app/views/investors/prove.html.slim
+++ b/app/views/investors/prove.html.slim
@@ -27,6 +27,10 @@
         | 当前申请表状态:
         em
           | #{human_investor_status(@investor)}
+      p.term-tips
+        | 我已接受并阅读此
+        em
+          = link_to '投资指南', guide_about_index_path, target: '_blank'
 
       .row
         .small-12.medium-6.columns.ng-cloak
