--- a/app/assets/stylesheets/components/footer.css.scss
+++ b/app/assets/stylesheets/components/footer.css.scss
@@ -4,9 +4,11 @@
   padding-top: 2rem;
   padding-bottom: 2rem;
   border-top: 1px solid #eee;
+  font-size: 0.875rem;
 
   .inline-list li a {
     color: #666;
+    font-size: 0.875rem;
     &:hover {
       text-decoration: underline;
     }
