--- a/app/assets/stylesheets/investors.css.scss
+++ b/app/assets/stylesheets/investors.css.scss
@@ -9,6 +9,7 @@
       a {
         font-size: 1.2rem;
         margin-left: 1rem;
+        color: #bbb;
       }
     }
   }
@@ -34,6 +35,11 @@
         a {
           color: #333;
         }
+      }
+
+      .type {
+        color: #999;
+        font-size: 0.875rem;
       }
     }
 
