--- a/app/views/investors/index.html.slim
+++ b/app/views/investors/index.html.slim
@@ -9,7 +9,16 @@
         p 关注优秀的投资人, 跟投项目, 学习投资理念
   .row
     .small-12.columns
-      form ng-submit='search()' ng-controller='InvestorSearchController'
+      form ng-submit='search()' ng-controller='InvestorSearchController' ng-init='q="#{params[:investor_type]}"'
+        .row
+          .small-12.columns
+            dl.sub-nav
+              dt 类别:
+              dd class="#{active_for('', params[:investor_type].to_s)}" ng-class="{ active: is_selected_investor_type('') }"
+                a ng-click='select_investor_type("")' 全部
+              - @investor_types.each do |investor_type|
+                dd class="#{active_for(investor_type.to_s, params[:investor_type].to_s)}" ng-class="{ active: is_selected_investor_type('#{investor_type}') }"
+                  a ng-click='select_investor_type("#{investor_type}")' #{t('investor.investor_types.'+ investor_type)}
         .row.search.collapse
           .small-9.medium-6.large-4.columns
             input type='text' ng-model='q' ng-init='q="#{params[:q]}"' placeholder='输入投资人信息, 如: 张三'
