--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -62,8 +62,10 @@
                             = link_to m.user.name, user_path(m.user)
                           .job-title #{m.title}
                           .description #{m.description || m.user.description}
-              .more-info
-                = link_to '查看更多团队故事...', team_project_path(@project)
+            - if @project.team_story.present?
+              hr
+                .description
+                  | #{@project.team_story}
 
           .box
             = render 'job'
